OO-3453: add subscription handler for the WebDAV folders of a course